Fix layout spacing, add clear history button and endpoint for web chat

--- a/static/style.css
+++ b/static/style.css
@@ -154,10 +154,10 @@ body {
 }
 
 .container {
-    margin-top: 80px;
+    margin-top: 120px;
     margin-bottom: 80px;
     width: 100%;
-    height: calc(100vh - 160px);
+    height: calc(100vh - 200px);
 }
 
 .main-layout {
